fix z-index (.top)

--- a/style/material.css
+++ b/style/material.css
@@ -15,7 +15,7 @@ body {
 	width: 100%;
 	top: 0px;
 	max-width: inherit;
-	z-index: 10;
+	z-index: 1;
 	padding: 17px;
 	background: rgba(33,150,243,1);
 	color: rgba(187,222,251 ,1);
